# swahili_psych_taxonomy

./: README.md  pyproject.toml
Data/: FairnessPlotData.csv  IntersectionalBias.csv  PredsSwahiliCulturalPsychData.xlsx  SwahiliCulturalPsychData.csv
scripts/: baselines.py  error_analysis_plot.py  intersectionalBiasPlot.R  llms_binary_eval.py  llms_continuous_eval.py  model_fairness_plots.py  plms_eval.py  r_analysis.py
